@@ -4,7 +4,7 @@
   "VERSION": {
     "MAJOR": 0,
     "MINOR": 3,
-    "PATCH": 1
+    "PATCH": 2
   },
   "KSP_VERSION": {
     "MAJOR": 0,
